fix: multiple images - add overflow scroll

--- a/src/pages/products/{ShopifyProduct.productType}/product-page.module.css
+++ b/src/pages/products/{ShopifyProduct.productType}/product-page.module.css
@@ -24,11 +24,12 @@
   padding-bottom: var(--space-2xl);
 }
 
-ul {
+.productImageList {
   display: flex;
+  overflow-x: scroll;
 }
 
-li {
+.productImageListItem {
   display: flex;
   flex: 0 0 100%;
   white-space: nowrap;
@@ -77,7 +78,7 @@ li {
 
 .optionsWrapper {
   display: grid;
-  grid-template-columns: var(--product-grid);
+  grid-template-columns: var(--product-grproductImageWrapperd);
   gap: var(--space-lg);
   padding-bottom: var(--space-lg);
 }
